layout/resize: add hovering div with z-index to prevent blocking - closes #320

--- a/packages/core/src/components/Cell/Resizable/index.css
+++ b/packages/core/src/components/Cell/Resizable/index.css
@@ -28,7 +28,7 @@
 
 .ory-cell-resizable.react-resizable > .react-resizable-handle {
   position: absolute;
-  z-index: 4;
+  z-index: 5;
   width: 4px;
   top: 0;
   bottom: 0;
